# GameOfLifeCpp

./: CMakeLists.txt  README.md  Slider.h  main.cpp  mygame
